--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="form-control">
                         <label for="cep"></label>
                         <input id="cep" placeholder="CEP" name="cep" type="text" class="form-input">
-                        <div class="error-message" data-error="cep">Campo Requerido</div>
+                        <div class="error-message" data-error="cep"></div>
                     </div>
                     <div class="form-control">
                         <label for="street"></label>
@@ -35,7 +35,7 @@
                     <div class="form-control">
                         <label for="number"></label>
                         <input id="number" placeholder="NÙMERO" name="number" type="text" class="form-input">
-                        <div class="error-message" data-error="number">Campo Requerido</div>
+                        <div class="error-message" data-error="number"></div>
                     </div>
                     <div class="form-control">
                         <label for="city"></label>
