--- a/index.html
+++ b/index.html
@@ -54,9 +54,16 @@
                 <p class="address-line">Rua dos Jardins,720</p>
                 <p class="cep-line">11200-345</p>
             </div>
-            
         </section>
     </main>
+    <section id="contact-modal" class="modal-container active">
+        <div class="modal-box">
+            <div class="modal-content">
+                <p>@juan.nobert</p>
+            </div>
+            <button class="btn">Fechar</button>
+        </div>
+    </section>
     <script type="module" src="js/dsviacep.js"></script>
   </body>
 </body>
