ModalController and PageController created

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             </div>
         </section>
     </main>
-    <section id="contact-modal" class="modal-container active">
+    <section id="contact-modal" class="modal-container">
         <div class="modal-box">
             <div class="modal-content">
                 <p>@juan.nobert</p>
             </div>
-            <button class="btn">Fechar</button>
+            <button id="btn-modal-close" class="btn">Fechar</button>
         </div>
     </section>
     <script type="module" src="js/dsviacep.js"></script>
